--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SensorView</string>
+    <string name="textview">TextView</string>
+    <string name="show_graphs">Show Graphs</string>
+    <string name="back_graph">Back to Values</string>
 </resources>
